--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-    --primary-color: hsl(0, 0%, 0%);
+    --background-color: hsl(0, 0%, 0%);
+    --color-1: hsl(0, 0%, 5%);
+    --color-2: hsl(0, 0%, 10%);
+    --color-3: hsl(0, 0%, 15%);
+    --color-4: hsl(0, 0%, 20%);
     --secondary-color: hsl(0, 0%, 90%);
+    --secondary-color-1: hsl(0, 0%, 80%);
+    --secondary-color-2: hsl(0, 0%, 70%);
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
-    background-color: var(--primary-color);
+    background-color: var(--background-color);
     color: var(--secondary-color);
 }
 
@@ -32,4 +42,33 @@ main {
     margin-top: 8px;
     border: 3px solid #e6e6e6;
     padding: 10px 15px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+header a {
+    color: var(--secondary-color);
+    padding: 5px 20px;
+    background-color: var(--color-2);
+    border-radius: 10px;
+    border: 1px solid var(--color-3);
+    box-shadow: 0 2px 5px hsla(0, 0%, 50%, 0.25);
+    margin: 0 10px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    transition: all 0.5s;
+}
+
+header a:hover {
+    background-color: var(--color-3);
+    border: 1px solid var(--color-4);
+    box-shadow: 0 2px 20px hsla(0, 0%, 50%, 0.5);
 }
