--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --background-color: hsl(0, 0%, 0%);
@@ -9,6 +11,8 @@
     --secondary-color: hsl(0, 0%, 90%);
     --secondary-color-1: hsl(0, 0%, 80%);
     --secondary-color-2: hsl(0, 0%, 70%);
+    --main-color: hsl(210, 90%, 50%);
+    --main-color-2: hsl(210, 90%, 55%);
 }
 
 a {
@@ -71,4 +75,102 @@ header a:hover {
     background-color: var(--color-3);
     border: 1px solid var(--color-4);
     box-shadow: 0 2px 20px hsla(0, 0%, 50%, 0.5);
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    justify-content: center;
+    margin: 100px 30px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-1);
+    border: 1px solid var(--color-2);
+    box-shadow: 0 2px 15px hsla(0, 0%, 50%, 0.25);
+    border-radius: 10px;
+    padding: 20px;
+    gap: 15px;
+}
+
+.card__image {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card__description {
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: var(--secondary-color-1);
+    letter-spacing: 0.25px;
+    margin: 0px;
+}
+
+.card__title {
+    font-family: "Roboto", sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 28px;
+    margin: 0px;
+}
+
+.card__links {
+    display: flex;
+    gap: 15px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
+    bottom: 0px;
+}
+
+.card__tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 0px;
+}
+
+.card__tags p {
+    font-family: "Roboto Mono", sans-serif;
+    font-size: 12px;
+    letter-spacing: 0.4px;
+    line-height: 16px;
+    color: var(--secondary-color-2);
+    padding: 2px 6px;
+    background-color: var(--color-2);
+    border-radius: 5px;
+    margin: 0px;
+}
+
+.card__links a {
+    /*margin: 0 7px;*/
+    background-color: var(--color-2);
+    border: 1px solid var(--color-3);
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    line-height: 24px;
+    size: 16px;
+    color: var(--secondary-color);
+    background-color: var(--color-2);
+    padding: 4px 10px 2px 10px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+
+.card__links a:hover {
+    background-color: var(--main-color);
+    border-color: var(--main-color-2);
+}
+
+.code-portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    justify-content: center;
 }
